# geoapi

./: .dockerignore  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.entwine  Dockerfile.potree  Makefile  PYTHON_CLIENT.md  README.md  api-deployment.yaml  api-service.yaml  assets-persistentvolumeclaim.yaml  bitbucket-pipelines.yml  client_config.json  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  pipelines.yml  postgres-deployment.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: main.yml
client/: README.md  README.mustache  config.json  setup.mustache
client_use_examples/: load_test_point_cloud_import_prod.py
conf/: nginx.conf  nginx.kube.conf
devops/: Dockerfile  Dockerfile.potree  Dockerfile.worker  README.md  docker-compose.local.yml  docker-compose.test.yml  pyproject.toml
devops/database/: Makefile  README.md  docker-compose-database.yml  postgresql.conf
devops/geoapi-services/: Makefile  README.md  docker-compose.yml  nginx.conf  sample.env  secrets.sample.env
devops/geoapi-workers/: Makefile  README.md  docker-compose-workers.yml  docker-compose.yml
devops/hazmapper/: README.md  nginx.conf
devops/local_conf/: nginx.conf  rabbitmq.conf
devops/misc/potree/page_template/: nsf_logo_snippet.txt
devops/utils/: backup_staging_production_to_ranch.sh  monitor_postgres.sh
geoapi/: alembic.ini  app.py  celery_app.py  celerybeat-schedule.dir  db.py  exceptions.py  initdb.py  log.py  middleware.py  output_swagger.py  settings.py  signals.py  websockets.py
geoapi/custom/: __init__.py
geoapi/custom/designsafe/: default_basemap_layers.py  project.py  project_users.py  utils.py
geoapi/dao/: projects.py  users.py
geoapi/migrations/: env.py
geoapi/migrations/versions/: 03c3d62d3b11_.py  0a10e4e1ea0c_.py  0f734dd05e3f_.py  15e9e94d699f_.py  20240916_1855-968f358e102a_add_watch_variables_to_project.py  20241207_0329-6495ed2ce317_update_postgis_2_5_to_3_3.py  20241211_0351-f2d7f797c82a_add_migration_of_spatial_index.py  20241211_1753-1040b620b32f_remove_observabledataproject.py  20250318_2013-9ca03b666aee_add_token_expires_at_to_streetview.py  20250414_1430-nullify_legacy_tokens.py  20251001_0210-60f005164287_tileserver__add_kind_internal_uuid.py  20251006_2148-9f3dc3155741_add_project_id_and_last_message_to_task.py  20251006_2205-ba8b92fc7ead_add_system_path_to_tile_server.py  20251030_2212-f5f3cfac6089_add_original_system_to_feature_asset.py  20251106_1443-3eba8dc7e4a9_add_filelocationcheck.py  203e14cdb88b_.py  27c3fcfc55fe_.py  3aaf2104296f_.py  (+22 more)
geoapi/models/: __init__.py  auth.py  feature.py  file_location_check.py  file_location_tracking_mixin.py  imported_file.py  layergroup.py  notification.py  observable_data.py  overlay.py  point_cloud.py  project.py  public_system_access_check.py  streetview.py  task.py  tile_server.py  users.py
geoapi/routes/: __init__.py  auth.py  file_location_status.py  files.py  notifications.py  projects.py  public_projects.py  public_system_access.py  status.py  streetview.py  streetview_mapillary_auth.py  webhooks.py  websockets.py
geoapi/schema/: files.py  projects.py  tapis.py
geoapi/schemas/: __init__.py  feature.py  feature_collection.py
geoapi/services/: features.py  file_inspection.py  file_location_status.py  images.py  imports.py  lidar.py  notifications.py  point_cloud.py  projects.py  public_system_access.py  streetview.py  tile_server.py  tippecanoe.py  users.py  vectors.py  videos.py
geoapi/tasks/: __init__.py  external_data.py  file_inspection.py  file_location_check.py  health.py  lidar.py  point_cloud.py  projects.py  raster.py  streetview.py  uploads.py  utils.py
geoapi/tests/: conftest.py  test_auth_routes.py  test_feature_assets_routes.py  test_projects_dao.py  test_projects_routes.py  test_services_lidar.py  test_users_dao.py
geoapi/tools/: check_observable_projects.py
geoapi/utils/: additional_file.py  agave.py  assets.py  capture_output.py  client_backend.py  decorators.py  external_apis.py  features.py  geo_location.py  geoalchemy_helpers.py  geometries.py  jwt_utils.py  las.py  lidar.py  mapillary.py  streetview.py  tenants.py  users.py
kube/: Makefile  README.md  README_nfsshare.md  api-deployment.yaml  assets-persistentvolumeclaim.yaml  celerybeat.deployment.yaml  combined.yaml  configMaps.yaml  dev.yaml  geoapi.deployment.yaml  geoapi.service.yaml  geoapi.yaml  migrations.yaml  nfsshare.deployment.yaml  nfsshare.pvc.yaml  nfsshare.service.yaml  nfsshare.yaml  nfsshare_pvc.yaml  nginx-deployment.yaml  nginx-service.yaml  nginx.deployment.yaml  nginx.service.yaml  pgdata3_prod.yaml  pgdata3_staging.yaml  postgres-deployment.yaml  postgres.deployment.yaml  postgres.pvc.yaml  postgres.service.yaml  prod.env  rabbitmq-deployment.yaml  rabbitmq.deployment.yaml  rabbitmq.service.yaml  staging.env  workers-claim0-persistentvolumeclaim.yaml  workers-deployment.yaml  workers.deployment.yaml
kube/utils/: backup_staging_production_to_ranch.sh  util.yaml
mcp/: Dockerfile  README.md  pyproject.toml  server.py
mcp/local_testing/: README.md  setup_mcp.py
mcp/tests/: conftest.py  test_server.py
mcp/tests/fixtures/: not_geospatial.txt
user_scripts/: bulk_laz_import.py
viewer/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
viewer/src/: index.html  karma.conf.js  styles.styl
(+94 files in other folders)
