[tool.poetry]
name = "geoapi"
version = "2.5"
description = ""
authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
alembic = "^1"
GeoAlchemy2 = "0.11.1"
geojson = "2.5.0"
SQLAlchemy = "^1.3.13"
gevent = "^24.11.1"
psycopg2 = "^2.9.10"
configparser = "^5.2.0"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.worker]
optional = true

[tool.poetry.group.worker.dependencies]
ffmpeg-python = "^0.2.0"
geopandas = "^0.10.2"
pyproj = "^3.3.0"
Shapely = "^1.8"
Pillow = "^9.2.0"
Fiona = "1.10.1"
laspy = "1.6.0"
ExifRead = "^2.3.2"
mapillary-tools = "0.9.5"

[tool.poetry.group.flask]
optional = true

[tool.poetry.group.flask.dependencies]
PyJWT = "^2.0.0"
gunicorn = "^23.0.0"
Flask = "^2.1.2"
Werkzeug = "^3.1.3"
flask-restx = "^0.5.1"
requests = "^2.32.3"
cryptography = "^37.0.2"
urllib3 = "<2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
