[tool.poetry]
name = "geoapi"
version = "2.5"
description = ""
authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1"
celery = "^5.4.0"
ffmpeg-python = "^0.2.0"
GeoAlchemy2 = "^0.16.0"
geojson = "^3.1.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
ipython = "^8.29.0"

[tool.poetry.group.flask]
optional = true

[tool.poetry.group.flask.dependencies]
cryptography = "^43.0.3"
flask = "^3.1.0"
flask-restx = "^1.3.0"
gevent = "^24.11.1"
gunicorn = "^23.0.0"
PyJWT = "^2.9.0"
requests = "^2.32.3"
urllib3 = "^2.2.3"

[tool.poetry.group.worker]
optional = true

[tool.poetry.group.worker.dependencies]
ExifRead = "^2.3.2"
Fiona = "1.10.1"
geopandas = "^1.0.1"
laspy = "^2.5.4"
mapillary-tools = "^0.11.2"
pillow = "^11.0.0"
pyogrio = "^0.10.0"
pyproj = "^3.7.0"
shapely = "^2.0.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
