[project]
name = "geoapi"
version = "2.4.2"
description = "GeoAPI Backend for Hazmapper"
authors = [
  { name = "DesignSafe-CI", email = "designsafe-ci@tacc.utexas.edu" },
]
readme = "README.md"
requires-python = "^3.12"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
alembic = "^1"
celery = "^5.5.2"
ExifRead = "^2.3.2"
ffmpeg-python = "^0.2.0"
Fiona = "1.10.1"
GeoAlchemy2 = "^0.16.0"
geojson = "^3.1.0"
geopandas = "^1.0.1"
ipython = "^9.6.0"
laspy = {extras = ["lazrs"], version = "^2.5.4"}
litestar = {extras = ["cryptography", "jwt", "pydantic", "redis", "sqlalchemy", "standard"], version = "^2.17.0"}
mapillary-tools = "^0.11.2"
psycopg2-binary = "^2.9.10"
pillow = "^12.1.1"
PyJWT = "^2.9.0"
pyogrio = "^0.10.0"
pyproj = "^3.7.0"
shapely = "^2.0.6"
sqlalchemy = "^2.0.41"
sqlalchemy-utils = "^0.41.2"
tapipy = "^1.8.2"
geojson-pydantic = "^2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
