[project]
name = "geoapi-mcp"
version = "0.1.0"
description = "Co-located MCP server exposing GeoAPI's file inspect + import endpoints as agent tools."
requires-python = ">=3.12"
# Its OWN deps -- deliberately tiny. Does NOT pull GeoAPI's heavy stack
# (GDAL, PDAL, Celery, PostGIS drivers). Talks to GeoAPI over HTTP only.
dependencies = [
    "fastmcp>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.pytest.ini_options]
# Keep mcp tests self-contained -- do not inherit the repo-root pytest.ini.
testpaths = ["tests"]
